<resources>
    <string name="app_name">MAD_Assigment</string>
    <string name="shr_hint_patientname">Name</string>
    <string name="shr_hint_patientemail">Email</string>
    <string name="addpatient">Add Patient ?</string>
    <string name="Yes">Accept</string>
    <string name="No">Cancel</string>
    <string name="add">Add Patient</string>
    <string name="addButton">ADD</string>
    <string name="label_hint_medicinetitle">Title</string>
    <string name="label_hint_medicinequantity">Quantity</string>
    <string name="label_hint_medicineimage">Image</string>
    <string name="label_add">ADD</string>
    <string name="label_hint_medicineDesc">Description</string>
    <string name="medspinner">Select medicine to refill</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_empty">Cannot be empty</string>

</resources>
